--- a/index-Copy1.ipynb
+++ b/index-Copy1.ipynb
@@ -39,7 +39,8 @@
     }
    ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "(1/6)*(1/2)"
    ]
   },
   {
@@ -54,11 +55,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "def factorial(n):\n",
+    "    prod = 1\n",
+    "    while n > 0:\n",
+    "        prod *= n\n",
+    "        n -= 1\n",
+    "    return int(prod)\n",
+    "\n",
+    "def permutation(n,k):\n",
+    "    return int(factorial(n)/factorial(n-k))\n",
+    "\n",
+    "def combination(n,k):\n",
+    "    return int(permutation(n,k)/factorial(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5120000000000001"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(8/10)**3"
    ]
   },
   {
@@ -73,11 +105,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "p_c = .7\n",
+    "p_s_and_c = .35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_s_given_c = (p_s_and_c)/(p_c)\n",
+    "p_s_given_c"
    ]
   },
   {
@@ -92,11 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004524886877828055"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "(4/52)*(3/51)"
    ]
   },
   {
@@ -112,11 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8559987631416203"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "(95/100)*(94/99)*(93/98)"
    ]
   },
   {
@@ -145,7 +221,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "s_space = 6*6=36\n",
+    "p_a_and_b = (4/36)\n",
+    "p_a = P_i + P_j - p_i_and_j\n",
+    "p_i = (12/36)\n",
+    "p_j = (12/36)\n",
+    "p_i_and_j = (4/36)\n",
+    "p_a = (20/36)\n",
+    "p_a_given_b = (4/36)/(20/36)\n"
    ]
   },
   {
@@ -172,11 +255,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "p_a = .5\n",
+    "p_b = .4\n",
+    "p_a_and_b = .25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_b_given_a = p_a_and_b/p_a\n",
+    "p_b_given_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_notb_given_a = (p_a-p_a_and_b)/p_a\n",
+    "p_notb_given_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.625"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_a_given_b = p_a_and_b/p_b\n",
+    "p_a_given_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37500000000000006"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_nota_given_b = (p_b - p_a_and_b)/p_b\n",
+    "p_nota_given_b"
    ]
   },
   {
